# cassio_bootcamp

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Procfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yml  pylint.yml
docker/: Dockerfile  docker-compose.yml
gerenciador_tarefas/: main.py
tests/: test_config.py  test_tarefas.py  test_tarefas_get.py  test_tarefas_post.py
