[tool.poetry]
name = "Gerenciador de Tarefas"
version = "0.1.0"
description = ""
authors = ["Marcel Bittar <ma_bittar@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
requests = "^2.27.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
